package cn.cdut.a6pan.ui.main;

import androidx.lifecycle.ViewModel;

public class SettingViewModel extends ViewModel {
    // TODO: Implement the ViewModel
}
