package cn.cdut.a6pan.ui.main;

import androidx.lifecycle.ViewModel;

public class TransmissionViewModel extends ViewModel {
    // TODO: Implement the ViewModel
}
