@startuml

title __VIEWMODEL's Class Diagram__\n

  namespace cn.cdut.a6pan {
    namespace ui.main {
      namespace viewmodel {
        class cn.cdut.a6pan.ui.main.viewmodel.FileViewModel {
            {static} - NUM_PER_PAGE : int
            {static} - PAGE_FIRST : int
            {static} - TAG : String
            - checked : MutableLiveData<HashSet<Integer>>
            - ctx : Context
            - iscloseDialog : MutableLiveData<Boolean>
            - mLiveData : LiveData<PagedList<File>>
            - mPage : int
            - mRecycleBinData : LiveData<PagedList<File>>
            - orderBy : Integer
            - pageKeyedDataSource : PageKeyedDataSource
            - path : MutableLiveData<String>
            - pre : HashMap<String, String>
            - recycleBinDataSource : PageKeyedDataSource
            - title : MutableLiveData<String>
            + getChecked()
            + getIsCloseDialog()
            + getLiveData()
            + getPath()
            + getPrePath()
            + getRecycleBinRefreshLiveData()
            + getRefreshLiveData()
            + getTitle()
            + getmRecycleBinData()
            + initPagedList()
            + putPrePath()
            + setCtx()
            + setOrderBy()
            - getPageKeyedDataSource()
            - getRecycleBinDataSource()
            - initRecycleBinList()
        }
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.main {
      namespace viewmodel {
        class cn.cdut.a6pan.ui.main.viewmodel.SettingViewModel {
        }
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.main {
      namespace viewmodel {
        class cn.cdut.a6pan.ui.main.viewmodel.TransmissionViewModel {
            {static} - NUM_PER_PAGE : int
            {static} - TAG : String
            - ctx : Context
            - mLiveData : LiveData<PagedList<OfflineTask>>
            - pageKeyedDataSource : PageKeyedDataSource
            + getPageKeyedDataSource()
            + getRefreshLiveData()
            + getmLiveData()
            + setCtx()
            - initPagedList()
        }
      }
    }
  }
  

  namespace cn.cdut.a6pan {
    namespace ui.main {
      namespace viewmodel {
        class cn.cdut.a6pan.ui.main.viewmodel.UserViewModel {
            - user : MutableLiveData<Person>
            + UserViewModel()
            + getUser()
            + setUser()
        }
      }
    }
  }
  

  cn.cdut.a6pan.ui.main.viewmodel.FileViewModel -up-|> androidx.lifecycle.ViewModel
  cn.cdut.a6pan.ui.main.viewmodel.FileViewModel o-- cn.cdut.a6pan.Bean.ResultFilePage : resultBean
  cn.cdut.a6pan.ui.main.viewmodel.SettingViewModel -up-|> androidx.lifecycle.ViewModel
  cn.cdut.a6pan.ui.main.viewmodel.TransmissionViewModel -up-|> androidx.lifecycle.ViewModel
  cn.cdut.a6pan.ui.main.viewmodel.TransmissionViewModel o-- cn.cdut.a6pan.Bean.ResultOfflineTaskPage : resultBean
  cn.cdut.a6pan.ui.main.viewmodel.UserViewModel -up-|> androidx.lifecycle.AndroidViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
